# purchase_analysis

./: .gitignore  AGENTS.md  INDEX.md  README.md  demo_queries.sql  export_to_sqlite.py  iframe_debug_1.html  iframe_debug_2.html  package-lock.json  purchase_analysis.db  pyproject.toml  run_pipeline.py  sberbank_eis_test.html  Тестовое задание.txt
configs/: entity_scope.csv  source_sprints_allowlist.csv  source_sprints_manifest.csv
docs/: CLEANUP_NOTES.md  DEDUPLICATION.md  ENTITY_SCOPE.md  FABRIKANT_PLAN.md  INDEX.md  PROJECT_MAP.md  RUNBOOK.md  SOURCES.md  SupplierCollusionHeatmap.tsx  audit_2026-06-14.md  b2b_center_handoff_2026-06-18.md  collaboration_prompts.md  compliance_report.md  database_usage.md  entity_resolution_protocol.md  entity_scope_audit_2026-06-14.md  etp_integration_audit.md  gpt54_handoff_prompt.md  parser_gost_v2.md
notebooks/: purchase_analysis.ipynb
presentation/: Defense_Speech.docx  Defense_Speech_FINAL.docx  Defense_Speech_v2.docx  README.md  generate_defense_speech.py  package-lock.json  package.json
scratch/: merge_aliases.py  merge_sprints.py  orphaned.txt  patch_coverage.py  probe_roseltorg.py  rebuild_coverage.py  statuses.txt
scripts/: b2b_bootstrap_session.py  b2b_center_prompt2_source_sprint.py  b2b_center_prompt2_source_sprint_v2.py  b2b_center_reenrich_saved_details.py  bootstrap_local_db.cmd  bootstrap_local_db.ps1  build_notebook.py  build_presentation_data.py  eis_prompt2_batch_sprint.py  eis_prompt2_source_sprint.py  eis_prompt2_source_sprint_v2.py  etpgpb_prompt2_source_sprint_v2.py  install_dbeaver.cmd  (+27 more)
(+5884 files in other folders)
