[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purchase-analysis"
version = "0.1.0"
description = "Reproducible public procurement analysis for Sber group entities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "matplotlib>=3.8",
  "nbclient>=0.10",
  "nbformat>=5.10",
  "pandas>=2.2",
  "playwright>=1.40",
  "psycopg[binary]>=3.2",
  "pypdf>=5.0",
  "requests>=2.32",
]

[project.scripts]
purchase-analysis = "purchase_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
